# ostd

./: CMakeLists.txt
include/: debug.h  ocharutil.h  oconfig.h  oconsole.h  ocontainer.h  ocontainer.tpp  oexception.h  ofile.h  oformat.h  ographics.cpp  ographics.h  omemory.h  omemory.tpp  onumber.h  orandom.h  ostringutil.h  ostringutil.tpp  osystem.h  otestutil.h  otextutil.h  otime.h  ounicode.h
src/: debug.cpp  ocharutil.cpp  oconfig.cpp  oconsole.cpp  ocontainer.cpp  oexception.cpp  ofile.cpp  oformat.cpp  omemory.cpp  onumber.cpp  orandom.cpp  ostringutil.cpp  osystem.cpp  otestutil.cpp  otextutil.cpp  otime.cpp  ounicode.cpp
